Menambahkan read book by id
