# server/src/api.yaml
@@ -174,6 +174,37 @@ paths:
           description: 'Bad Request'
         500:
           description: 'Internal Server Error'
+  
+  /books/{id}:
+    get:
+      tags:
+        - Books
+      summary: Get Book by ID
+      description: "Get specific book details by ID (Authorized)"
+      parameters:
+        - name: id
+          in: path
+          required: true
+          description: ID of the book
+          schema:
+            type: string
+      security:
+        - bearerAuth: []
+      responses:
+        200:
+          description: 'Book Found Successfully'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Add_Book_Payload'
+        400:
+          description: 'Bad Request'
+        401:
+          description: 'Unauthorized'
+        404:
+          description: 'Book Not Found'
+        500:
+          description: 'Internal Server Error'
 
 components:
   securitySchemes:
